--- a/heroku.yml
+++ b/heroku.yml
@@ -3,7 +3,7 @@ build:
         web: Dockerfile
 
 run:
-    web: gunicorn hello_django.wsgi:application --bind 0.0.0.0:$PORT
+    web: gunicorn hello_django.wsgi:application --log-file -
 
 release:
     image: web
